--- a/HW5/css/index.css
+++ b/HW5/css/index.css
@@ -119,7 +119,7 @@ main .main-block h2{
 }
   
 .main-word p{
-    font-family: Arial Black,sans-serif;
+    font-family: Arial,sans-serif;
     font-size: 12px;
     line-height: 1.33;
     margin: 0;
