--- a/HW5/css/index.css
+++ b/HW5/css/index.css
@@ -114,7 +114,7 @@ main .main-block h2{
   
 .main-word{
     background: #f7fbda;
-    padding: 16px 15px;
+    padding: 16px 15px 4px 15px;
     border-radius: 3px;
 }
   
